--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,22 +67,31 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".Activities.ImageViewActivity"></activity>
+        <activity android:name=".Activities.ImageViewActivity"/>
 
-        <receiver android:name=".AsfaltameBroadcastReceiver" android:enabled="true" android:exported="true">
+        <receiver
+            android:name=".AsfaltameBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.dam.asfaltame.REPARADO"></action>
-                <action android:name="com.dam.asfaltame.EN_REPARACION"></action>
+                <action android:name="com.dam.asfaltame.REPARADO"/>
+                <action android:name="com.dam.asfaltame.EN_REPARACION"/>
             </intent-filter>
         </receiver>
-        <service android:name=".AsfaltameFirebaseInstanceIdService" android:enabled="true" android:exported="true">
+        <service
+            android:name=".AsfaltameFirebaseInstanceIdService"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"></action>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
-        <service android:name=".AsfaltameMessagingService" android:enabled="true" android:exported="true">
+        <service
+            android:name=".AsfaltameMessagingService"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"></action>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
     </application>
